Fixed horizontal overflow

--- a/static/stylesheets/main.less
+++ b/static/stylesheets/main.less
@@ -6,7 +6,9 @@ body {
 #chat-container {
   padding:5px;
   padding-bottom:80px;
+  overflow:hidden;
 }
+
 .chatbox {
   border:1px #000 solid;
   margin-bottom:10px;
