--- a/static/stylesheets/out.css
+++ b/static/stylesheets/out.css
@@ -5,6 +5,7 @@ body {
 #chat-container {
   padding: 5px;
   padding-bottom: 80px;
+  overflow: hidden;
 }
 .chatbox {
   border: 1px #000 solid;
